--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,8 +9,9 @@
     "@fontsource/roboto": "^4.5.8",
     "@hookform/resolvers": "^2.9.10",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.12",
+    "@mui/material": "^5.11.1",
     "@mui/styled-engine-sc": "^5.10.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -37,10 +38,12 @@
     "react-hook-form": "^7.39.1",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-qr-code": "^2.0.8",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "4.0.3",
+    "recharts": "^2.2.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.5.3",
